Fix background spilling out of game window in Hunter mode

--- a/niff.css
+++ b/niff.css
@@ -199,6 +199,13 @@ li {
     left: 0px;
 } */
 
+#scene {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
 #otherWorldBackgroundCanvas,
 #otherWorldMonsterCanvas,
 #otherWorldRecticleCanvas {
